
syntax = "proto3";


package proto;

// The greeting service definition.
service Baclnt {

  rpc TriggerBackup (stream Paths) returns (Status) {}
  rpc GetStatusPaths (stream Paths) returns (stream Info) {}
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}



// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string name = 1;
}


// The request message containing the user's name.
message Paths {
  string path = 1;
}

// The response message containing the greetings
message Status {
  string message = 1;
}

message Info {
  string path = 1;
  int64 size = 2;
  bool exists = 3;
}
